# theway

./: CMakeLists.txt  README.md  compute_hash.py
payload/: PDMApplet_jjs.java
src/: extract.cpp  extract.hpp  generate.cpp  generate.hpp  main.cpp  popl.hpp  repackage.cpp  repackage.hpp  util.cpp  util.hpp
